syntax = "proto3";
package candy.meta;

option go_package = "meta";

import "common.proto";

service Store {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Auth(AuthRequest) returns (AuthResponse);

}

message RegisterRequest {
    int64 ID = 1;
    string User = 2;
    string Password = 3;
}

message RegisterResponse {
    ResponseHeader header = 1;
}


message AuthRequest {
    string User = 1;
    string Password = 2;
}

message AuthResponse {
    ResponseHeader header = 1;
    int64 ID = 2;
}
